Inicio e información creados

--- a/index.html
+++ b/index.html
@@ -1,13 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Klee+One&display=swap');
+  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
   <!-- Contenido de la página -->
-
+  <div class="menu">
+    <button class="boton" id="btn1">Inicio</button>
+    <button class="boton" id="btn2">Información</button>
+    <button class="boton" id="btn3">Formulario</button>  
+  </div>
+  <div id="tab1" class="tab" class="active">
+  <h1>Inicio</h1>
+  <p>Hola mi nombre es David Martín Muñoz y esta es la Práctica Evaluable 1 de HLC.</p><br>
+  <img src="https://miro.medium.com/v2/resize:fit:828/format:webp/0*XFKvzn30CglSpb3o"/>
+  </div>
+  <div id="tab2" class="tab">
+  <h1>Información</h1>
+  <p>El examen de HLC consta de las siguientes partes:</p>
+  <ul>
+    <li>Un menú lateral.</li>
+    <li>Un formulario.</li>
+    <li>Varios elementos HTML como:</li>
+      <ul>
+        <li>Titulos.</li>
+        <li>Imagenes.</li>
+        <li>Listas.</li>
+      </ul>
+  </ul>
+  <p>Algunos datos importantes sobre la práctica son:</p>
+  <h4>
+    <table border="1">
+      <thead class="cabezatabla">
+        <tr>
+          <td>Forma de entrega</td>
+          <td>Tiempo</td>
+          <td>Calificación</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>GitHub y GitHub Pages</td>
+          <td>2 horas</td>
+          <td>Numérica</td>
+        </tr>
+      </tbody>
+    </table>
+  </h4>
+  </div>
+  <div id="tab3" class="tab">
+    
+  </div>
   <!-- Fin contenido de la página -->
 
   <script>
